[gd_scene load_steps=11 format=2]

[ext_resource path="res://new_theme.tres" type="Theme" id=1]
[ext_resource path="res://Visualizacion.tscn" type="PackedScene" id=2]
[ext_resource path="res://algs/LogN.gd" type="Script" id=3]
[ext_resource path="res://VentanaPrincipal.gd" type="Script" id=4]
[ext_resource path="res://algs/Exp.gd" type="Script" id=5]
[ext_resource path="res://algs/Np3.gd" type="Script" id=6]
[ext_resource path="res://algs/NLogN.gd" type="Script" id=7]
[ext_resource path="res://algs/N.gd" type="Script" id=8]
[ext_resource path="res://algs/Np2.gd" type="Script" id=9]
[ext_resource path="res://icons/new_gradienttexture2d.tres" type="Texture" id=10]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="PanelSuperior" type="Panel" parent="."]
anchor_right = 1.0
margin_bottom = 32.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelSuperior"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_stretch_ratio = 0.0
theme = ExtResource( 1 )

[node name="btnIniciarTodos" type="Button" parent="PanelSuperior/HBoxContainer"]
margin_right = 92.0
margin_bottom = 24.0
rect_min_size = Vector2( 80, 0 )
hint_tooltip = "Inicia todos los algoritmos visibles."
text = "Iniciar todos"

[node name="btnDetenerTodos" type="Button" parent="PanelSuperior/HBoxContainer"]
margin_left = 96.0
margin_right = 200.0
margin_bottom = 24.0
rect_min_size = Vector2( 80, 0 )
hint_tooltip = "Inicia todos los algoritmos visibles."
text = "Detener todos"

[node name="VSeparator" type="VSeparator" parent="PanelSuperior/HBoxContainer"]
margin_left = 204.0
margin_right = 208.0
margin_bottom = 24.0

[node name="labelValorN" type="Label" parent="PanelSuperior/HBoxContainer"]
margin_left = 212.0
margin_top = 5.0
margin_right = 282.0
margin_bottom = 19.0
text = "Valor de N:"

[node name="inputValorN" type="SpinBox" parent="PanelSuperior/HBoxContainer"]
margin_left = 286.0
margin_right = 414.0
margin_bottom = 24.0
rect_min_size = Vector2( 128, 0 )
max_value = 1000.0
value = 200.0
allow_greater = true

[node name="GridContainer" type="GridContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 32.0
margin_bottom = -32.0
rect_clip_content = true
columns = 3

[node name="VisLogN" parent="GridContainer" instance=ExtResource( 2 )]
margin_right = 339.0
margin_bottom = 266.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="VisN" parent="GridContainer" instance=ExtResource( 2 )]
margin_left = 343.0
margin_right = 682.0
margin_bottom = 266.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 8 )

[node name="VisNLogN" parent="GridContainer" instance=ExtResource( 2 )]
margin_left = 686.0
margin_right = 1024.0
margin_bottom = 266.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 7 )

[node name="VisNp2" parent="GridContainer" instance=ExtResource( 2 )]
margin_top = 270.0
margin_right = 339.0
margin_bottom = 536.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 9 )

[node name="VisNp3" parent="GridContainer" instance=ExtResource( 2 )]
margin_left = 343.0
margin_top = 270.0
margin_right = 682.0
margin_bottom = 536.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 6 )

[node name="VisExp" parent="GridContainer" instance=ExtResource( 2 )]
margin_left = 686.0
margin_top = 270.0
margin_right = 1024.0
margin_bottom = 536.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 5 )

[node name="PanelInferior" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_vertical = 0
rect_min_size = Vector2( 0, 32 )

[node name="HBoxContainer" type="HBoxContainer" parent="PanelInferior"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0

[node name="labelMostrar" type="Label" parent="PanelInferior/HBoxContainer"]
margin_top = 5.0
margin_right = 53.0
margin_bottom = 19.0
text = "Mostrar:"

[node name="btnMostrarLogN" type="Button" parent="PanelInferior/HBoxContainer"]
self_modulate = Color( 1, 0, 0, 1 )
margin_left = 57.0
margin_right = 124.0
margin_bottom = 24.0
toggle_mode = true
pressed = true
text = "log(N)"
icon = ExtResource( 10 )

[node name="btnMostrarN" type="Button" parent="PanelInferior/HBoxContainer"]
self_modulate = Color( 0, 0, 1, 1 )
margin_left = 128.0
margin_right = 168.0
margin_bottom = 24.0
toggle_mode = true
pressed = true
text = "N"
icon = ExtResource( 10 )

[node name="btnMostrarNLogN" type="Button" parent="PanelInferior/HBoxContainer"]
self_modulate = Color( 0, 1, 0, 1 )
margin_left = 172.0
margin_right = 257.0
margin_bottom = 24.0
toggle_mode = true
pressed = true
text = "N*log(N)"
icon = ExtResource( 10 )

[node name="btnMostrarNp2" type="Button" parent="PanelInferior/HBoxContainer"]
self_modulate = Color( 1, 1, 0, 1 )
margin_left = 261.0
margin_right = 306.0
margin_bottom = 24.0
toggle_mode = true
pressed = true
text = "N²"
icon = ExtResource( 10 )

[node name="btnMostrarNp3" type="Button" parent="PanelInferior/HBoxContainer"]
self_modulate = Color( 1, 0.501961, 0, 1 )
margin_left = 310.0
margin_right = 355.0
margin_bottom = 24.0
toggle_mode = true
pressed = true
text = "N³"
icon = ExtResource( 10 )

[node name="btnMostrarExp" type="Button" parent="PanelInferior/HBoxContainer"]
self_modulate = Color( 0.564706, 0, 0.701961, 1 )
margin_left = 359.0
margin_right = 412.0
margin_bottom = 24.0
toggle_mode = true
pressed = true
text = "2^n"
icon = ExtResource( 10 )

[connection signal="pressed" from="PanelSuperior/HBoxContainer/btnIniciarTodos" to="." method="_on_btnIniciarTodos_pressed"]
[connection signal="pressed" from="PanelSuperior/HBoxContainer/btnDetenerTodos" to="." method="_on_btnDetenerTodos_pressed"]
[connection signal="value_changed" from="PanelSuperior/HBoxContainer/inputValorN" to="." method="_on_inputValorN_value_changed"]
[connection signal="toggled" from="PanelInferior/HBoxContainer/btnMostrarLogN" to="." method="_on_btnMostrar_toggled" binds= [ 0 ]]
[connection signal="toggled" from="PanelInferior/HBoxContainer/btnMostrarN" to="." method="_on_btnMostrar_toggled" binds= [ 1 ]]
[connection signal="toggled" from="PanelInferior/HBoxContainer/btnMostrarNLogN" to="." method="_on_btnMostrar_toggled" binds= [ 2 ]]
[connection signal="toggled" from="PanelInferior/HBoxContainer/btnMostrarNp2" to="." method="_on_btnMostrar_toggled" binds= [ 3 ]]
[connection signal="toggled" from="PanelInferior/HBoxContainer/btnMostrarNp3" to="." method="_on_btnMostrar_toggled" binds= [ 4 ]]
[connection signal="toggled" from="PanelInferior/HBoxContainer/btnMostrarExp" to="." method="_on_btnMostrar_toggled" binds= [ 5 ]]
